[tool.poetry]
name = "td4exemples"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bottle = "^0.12.19"
pytest = "^6.2.2"
webtest = "^2.0.35"
pytest-cov = "^2.11.1"
ipdb = "^0.13.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
